# ztp

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-02a411b9439d6010edd79e01a8d1df600a037b792645dddf60f198c37f5e42a5.json  query-0d93567a85b6d7824a6fb442045a8ff76d6de6bf5f1231325d40636c60c20bea.json  query-14e7a65e1c234d0b97eb7a308ac55e114d4a770e790b596279dcc101d344df17.json  query-1f88875d96b6ff784f8915e209b17efbdf3c387a8a0b2fd486c8a52b7ff6644c.json  query-2d2ffece1d620002cc22093a9da6a46aa8e42a14eb5ff01c9917061729717124.json  query-348ce5f75cd0973615f72d6cd93c679351d744116cd8fc5b270ee57673a7cad3.json  query-376a949f4a9f435048a509f904ecac51d469b6c8dc09e9d280b2021fdbdc4dc9.json  query-3f9c552a021fe134da4935bdb63e7d247550867030384f30c990f4abdc68c273.json  query-4ae5fd61369d39465a5c66b4bcfae46f5da3f2ef3f40902756d0707c8f2d851d.json  query-660f64eee1a5e789f22e5091bc8a551a0a8281de7dbb1b0b213df05b6bbb41f7.json  query-6b41dbdae12d50529f15288671eae7375d082b74e600468fc9cbb0b43e6d0ce1.json  query-713630d1adb9889b9b67b34f28d0e7f26cece2ae6adea358eeed13006cb6dca2.json  query-94d08cca9c5256b84b723b327a99da07660e95b805f6b583843156fb19a0503a.json  query-a13b87527e91ab3353987ffbdbb79559fd137d8a5f380d512f98a99c73fb66de.json  query-b68d38b4d2809c6eb0e3b1b30785c0b9f960b5d36535a2363a8dcece23c0e69d.json  query-beabcebf4f16b5d9fd80c6a07d99d62dce1fc222e19b52a295224bcd29cb48c5.json  query-d3ac78eeb78596f4923e1487c04921ce3a441979c58742e22bb2c342a048be81.json  query-d57aeeb6fb757f50b21ef9c5a03c38718dd52e233183435416532b836d500e8b.json  query-e6f664510de70e5206dbca02d8f33b464d29ab7cf99cd70f09d06222e8c48c73.json  query-ede300331bfd52959cc08370562b1ac2a7371133626994b8c65d3043bbb67b24.json  query-edfca041326a91cb5b01db6af5920e0bf4c99c9fc6ea8a511d03ee969d4276d0.json  query-f6f7763e509db9e8de2fac7b6dcb225140aaf595a5b76b900fe52f9d3b3e30f7.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240419163503_create_subscriptions_table.sql  20240507074250_add_status_to_subscriptions.sql  20240507075200_make_status_not_null_in_subscriptions.sql  20240507075716_create_subscription_tokens_table.sql  20240519083352_create_users_table.sql  20240519091952_rename_password_column.sql  20240519103047_add_salt_to_users.sql  20240519125819_remove_salt_from_users.sql  20240525152234_seed_user.sql  20240529071357_create_idempotency_table.sql  20240531065504_relax_null_checks_on_idempotency.sql  20240601123926_create_newsletter_issues_table.sql  20240601181640_create_issue_delivery_queue_table.sql  20240602081926_add_retry_timer_to_deliveries.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  delivery.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: expiry.rs  key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
(+14 files in other folders)
